bug
getuserinfo